# mpc-signing

./: Cargo.toml  README.md
dealer/: Cargo.toml
dealer/examples/: dealer.rs
dealer/src/: dealer.rs  main.rs
docs/: README.md
docs/no-trusted-dealer/: README.md
docs/trusted-dealer/: README.md  frost_signing.pu
gateway/: Cargo.toml
gateway/src/: gateway.rs  main.rs  messages.rs
node/: Cargo.toml
p2p/: Cargo.toml
p2p/src/: client.rs  lib.rs
proto_api/: Cargo.toml
proto_api/proto/: gateway.proto
proto_api/src/: lib.rs
