[workspace]
resolver = "2"

members = [
    "dealer",
    "gateway",
    "node",
] 

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["sync", "macros", "time", "rt-multi-thread", "signal"] }
anyhow = "1"
bincode = { version = "1.3" }