[workspace]
resolver = "2"

members = ["dealer", "gateway", "node", "p2p", "proto_api"]

[workspace.dependencies]
proto_api = { path = "./proto_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bincode = { version = "1.3" }
libp2p = "0.53"
libp2p-mplex = "0.41.0"
libp2p-quic = { version = "0.10", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
bytes = "1"
serde_yaml = "0.8"
log = "0"
hex = "0.4"
tonic = { version = "0.9", features = ["tls"] }
