[package]
name = "gateway"
version = "1.0.0"
edition = "2021"

[dependencies]
tonic = { version = "0.9", features = ["tls"] }
tower = { version = "0.4" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
proto_api = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
